[project]
name = "audio-processing"
version = "0.1.0"
description = ""
authors = [{name = "Jannik Falkenstein", email = "<audio-processor@falkenstein.tech>"}]

[tool.poetry]
name = "audio-processing"
version = "0.1.0"
description = ""
authors = ["Jannik Falkenstein <audio-processor@falkenstein.tech>"]
readme = "README.md"

[tool.poetry.scripts]
pan_audio = "audio-processing.pan_audio:pan_audio"

[tool.poetry.dependencies]
python = "^3.12"
pydub = "^0.25.1"
matplotlib = "^3.10.0"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
